--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <!-- 'title' is the data that is passed from the index.js during the response.render function call -->
+    <!-- ‘title’ is the data that is passed from the index.js during the response.render function call -->
     <title><%= title %></title>
 </head>
 <body>
