--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -1,12 +1,14 @@
 <html>
-<head>
+	<head>
    <!-- The param which is passed from render-->
-   <title><%= title %></title>
-</head>
-<body>
-<div>
-   <a href="/">Home</a> |
-   <a href="/store/add">Add item</a> |
-    <a href="/store">All items</a>
-</div>
-<h1><%= title %></h1>
+   		<title><%= title %></title>
+	</head>
+	<body>
+		<div>
+   			<a href="/">Home</a> |
+   			 <a href="/store/add">Add item</a> |
+   			  <a href="/store">All items</a>
+		</div>
+		<h1><%= title %></h1>
+	</body>
+</html>
